# DUGseis

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py  configuration.md  data_processing.md  data_requirements.md  database.md  development.md  doc_requirements.txt  example_dataset.md  graphical_interface.md  index.md  installation.md  live_environment.md
dug_seis/: __init__.py  celeryconfig.py  cmd_line.py  coordinate_transforms.py  pytest.ini  util.py
dug_seis/acquisition/: __init__.py  acquisition.py  card_manager.py  data_to_asdf.py  flat_response_stationxml.py  generate_simulated_data.py  hardware_mockup.py  one_card.py  one_card_std_init.py  performanceMeasurement.txt  plotter.py  readInMatlab.m  star_hub.py
dug_seis/acquisition/hardware_driver/: pyspcm.py  regs.py
dug_seis/acquisition/testing/: load_yaml.py  test_example_unittest.py  test_file_move.py  test_station_xml.py
dug_seis/db/: db.py  sqlite_db_backend.py  sqlite_parser.py  utils.py
dug_seis/event_processing/detection/: __init__.py  coincidence_trigger.py  dug_trigger.py
dug_seis/event_processing/location/: locate_homogeneous.py
dug_seis/event_processing/magnitudes/: amplitude_based_magnitudes.py
dug_seis/event_processing/picking/: dug_picker.py  fbkt_picker.py  picker_helper.py  picker_virginie.py
dug_seis/event_processing/picking/pickers/aurem/: README.md  (+3 more)
dug_seis/graphical_interface/: __main__.py  image_view.py  main.py  relocation_dialog.py  save_waveform_dialog.py  three_d_view.py  waveform_plot_curve_item.py
dug_seis/graphical_interface/components/: grid.py
dug_seis/graphical_interface/ui_files/: main_window.py  main_window.ui  relocation_window.py  relocation_window.ui  save_waveforms_dialog.py  save_waveforms_dialog.ui
dug_seis/gui/: gui.py  gui_cfg.py  gui_util.py  style.css
dug_seis/merge/: merge.py  test_merging.py
dug_seis/plotting/: plotting.py
dug_seis/processing/: ASDF_GMUG.py  GMUG_to_ASDF.py  celery_tasks.py  dug_trigger.py  event.py  event_processing.py  get_waveforms.py  location.py  obs_trigger.py  processing.py  test_processing.py
dug_seis/project/: project.py
dug_seis/tests/: test_coordinate_transforms.py  test_db.py  test_dug_picker.py  test_dugseis_project.py  test_location.py  test_util.py  test_waveform_indexing.py
dug_seis/tests/data/: event_with_data_used.xml  event_with_full_arrival.xml  event_with_full_focal_mechanism.xml  event_with_full_magnitude.xml  event_with_full_origin.xml  event_with_full_pick.xml  event_with_preferred_ids.xml  event_with_station_magnitude.xml  event_with_station_magnitude_contribution.xml  iris_events.xml  neries_events.xml  qml-example-1.2-RC3.xml  quakeml_1.2_event.xml  simple_quakeml_file.xml  usgs_event.xml
dug_seis/tools/: analyse_enhanced.ipynb  analyse_enhanced_import_lib.ipynb  dot_plots.ipynb  ds_compare.sh  ds_picker_dot_plots_picks.py  ds_picker_histogram.py  ds_picker_main.py  ds_picker_synopsis.py  ds_picker_write_yaml.py  ds_yaml_dump.py  gmug_picks.ipynb  gmug_to_asdf.ipynb  histograms.ipynb  lib.py
dug_seis/visualization/: __init__.py  dashboard.py
dug_seis/waveform_handler/: indexing.py  utils.py  waveform_handler.py
paper/: GUI_ExampleEvent_Fig2.sqlite  GUI_exampleEvent_Fig2.yaml  paper.bib  paper.md
scripts/: coordinate_transform_test.py  dug_seis_example.yaml  dug_seis_example_2_acquisition_systems.yaml  dug_seis_example_4_acquisition_systems.yaml  generate_stationxml_files.py  load_and_analyse_prelimAE_waveforms.py  load_and_analyse_prelimAE_waveforms.yaml  run_noise_plotting.py  run_plotting_sync_check.py  run_plotting_sync_check.yaml  run_processing.py  run_processing_BedrettoMAM.py  run_processing_FEAR_stations.py  run_processing_FEAR_stations.yaml  run_processing_incl_REC_MA_determination.py  run_processing_incl_REC_MA_determination.yaml  run_processing_incl_REC_pick_refinement.py  run_two_stage_processing.py  simple_plotting_FEAR_stations.py  try_spectrogram.py
scripts/mam/: DUGseis_example.yaml.MR_org  get_waveforms_DUGseis.py  read_databaseRoutine.py
scripts/mam/yaml/: DUGseis_example.yaml  post_processing2_VALTERStimu1.yaml  post_processing_VALTERStimu1.yaml  post_processing_VALTERStimu1_smallWin.yaml  post_processing_VALTERStimu1_testPick.yaml
scripts/mock_live_environment/: fake_live_acquisition.py  live_processing_example.yaml  run_mock_live_processing.py
scripts/picker_virginie/: picker_virginie.py  run_postProcessing_Valter_20220323_Stimulation.py
(+27 files in other folders)
